# Hackathone-2

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: docker-builder.md  fastapi-backend-manager.md  fastapi-guardian.md  frontend-auth-w-auth-wiring.md  frontend-router-specialist.md  helm-chart-manager.md  kubernetes-deployer.md  neon-db-migrator.md  openai-agents-mcp-backend.md  openai-chatkit-frontend.md  spec-monorepo-steward.md  ui-ux-animation-designer.md
.specify/memory/: constitution.md
calm-orbit-todo/: PROJECT_STRUCTURE.md  QUICK_START.md
calm-orbit-todo/backend/: alembic.ini  pyproject.toml  requirements.txt  run_mcp_server.py
calm-orbit-todo/backend/alembic/: env.py
calm-orbit-todo/backend/alembic/versions/: 20251218_0003_003_add_phase3_chat_tables.py
calm-orbit-todo/backend/app/: __init__.py  config.py  database.py  main.py
calm-orbit-todo/backend/app/api/: __init__.py
calm-orbit-todo/backend/app/api/v1/: chat.py  conversations.py  router.py  tasks.py
calm-orbit-todo/backend/app/core/: __init__.py  auth.py  exceptions.py
calm-orbit-todo/backend/app/models/: __init__.py  message.py  task.py  user.py
calm-orbit-todo/backend/app/schemas/: auth.py
calm-orbit-todo/backend/app/services/: mcp_server.py  mcp_tools.py
calm-orbit-todo/backend/tests/: conftest.py
calm-orbit-todo/backend/tests/integration/: __init__.py  conftest.py  test_tasks_api.py
calm-orbit-todo/backend/tests/unit/: test_task_model.py  test_user_isolation.py
calm-orbit-todo/frontend/: .env.example  package-lock.json  tsconfig.json
phase2/backend/: pyproject.toml  (+2 more)
(+463 files in other folders)
